# cwautomacros

./: .cvsignore  Makefile  release
doc/: index.php
m4/: CW_AUTOMACROS.m4  CW_AUTOMACROS.m4.in  CW_BOOST.m4  CW_BOOST_TOOLSET.m4  CW_BOOST_VERSION.m4  CW_CONFIG_FILE.m4  CW_DOXYGEN.m4  CW_DO_OPTIONS.m4  CW_LIB_LIBCW.m4  CW_LIB_LIBCWD.m4  CW_LIB_LIBXML2.m4  CW_MALLOC_OVERHEAD.m4  CW_NEED_WORD_ALIGNMENT.m4  CW_OPG_FLAGS.m4  CW_SYS_MALLOC_OVERHEAD.m4  CW_SYS_PCH.m4  CW_SYS_RECURSIVE_BUILTIN_RETURN_ADDRESS.m4  CW_TRY_RUN.m4  CW_TYPE_EXTRACT_FROM.m4  CW_TYPE_GETGROUPS.m4
scripts/: autogen.sh
templates/: autogen.sh
templates/doxygen/: Makefile.am
